write up clean up

--- a/applications/example/servers/web/templates/apache/vhosts/vhost-applicationsite.com.conf
+++ b/applications/example/servers/web/templates/apache/vhosts/vhost-applicationsite.com.conf
@@ -6,12 +6,12 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	ServerName api.tierralengua.org
-    ServerAlias api.local
+	ServerName applicationsite.com
+    ServerAlias www.applicationsite.com
+    
+	DocumentRoot /var/www/applicationsite.com/public_html
 
-	DocumentRoot /var/www/api.tierralengua.org/public_html
-
-	<Directory /var/www/api.tierralengua.org/public_html>
+	<Directory /var/www/applicationsite.com/public_html>
         DirectoryIndex index.php
         AllowOverride All
         Order allow,deny
