--- a/applications/example/servers/web/templates/apache/vhosts/vhost-samplesite.com.conf
+++ b/applications/example/servers/web/templates/apache/vhosts/vhost-samplesite.com.conf
@@ -6,12 +6,12 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	ServerName apc.jessesnet.com
-    ServerAlias tierralengua.com www.tierralengua.com www.tierralengua.org
+	ServerName samplesite.com
+    ServerAlias www.samplesite.com
 
-	DocumentRoot /var/www/apc.jessesnet.com
+	DocumentRoot /var/www/samplesite.com
 
-	<Directory /var/www/apc.jessesnet.com>
+	<Directory /var/www/samplesite.com>
         DirectoryIndex apc.php
         AllowOverride All
         Order deny,allow
