--- a/test/example/Vagrantfile
+++ b/test/example/Vagrantfile
@@ -10,21 +10,18 @@ Vagrant.configure(2) do |config|
   ####
   ## OS for all VMs
   ####
-
   config.vm.box = "ubuntu/trusty64"
 
   ####
   ## Init modules for all VMs
   ## Will be executed BEFORE any other manifests
   ####
-
   config.vm.provision "shell",
     inline: "sudo apt-get update -y"
 
   ####
   ## Memory usage for the Vms
   ####
-
   config.vm.provider "virtualbox" do |v|
     v.memory = 1024
     v.cpus   = 1
@@ -37,13 +34,14 @@ Vagrant.configure(2) do |config|
   ####
   ## base box for testing
   ####
-
-  config.vm.define "server" do |server|
-
-    server.vm.network "forwarded_port", guest: "80", host: "1028", host_ip: "127.0.0.1"
-    server.vm.network "private_network", ip: "10.2.2.2"
-
+  config.vm.define "web" do |web|
+    web.vm.network "forwarded_port", guest: "80", host: "1028", host_ip: "127.0.0.1"
+    web.vm.network "private_network", ip: "10.2.2.2"
   end
   
+  config.vm.define "mysql" do |mysql|
+    mysql.vm.network "forwarded_port", guest: "3306", host: "1032", host_ip: "127.0.0.1"
+    mysql.vm.network "private_network", ip: "10.2.2.4"
+  end
 
 end
